FEAT: add Marker plugin
* Add MapsMarker model & plugin
* You can now create multiple markers inside one Maps Plugin, and they will be displayed on the map!
* Remove "content" input from Maps plugin (since a marker is no longer created at the Maps Plugin location, it's only the "center" of the map)
* Display of multiple markers is working for mapbox only
* I really don't know if other maps still work
* A part of the code was taken from djangocms-googlemap (v2.0.0)

--- a/djangocms_maps/templates/djangocms_maps/maps.html
+++ b/djangocms_maps/templates/djangocms_maps/maps.html
@@ -1,4 +1,4 @@
-{% load i18n %}{% get_current_language as LANGUAGE_CODE %}
+{% load i18n cms_tags %}{% get_current_language as LANGUAGE_CODE %}
 <div class="djangocms djangocms-maps plugin_maps">
     {% include "djangocms_maps/maps_title.html" %}
     <div class="djangocms-maps-container" id="djangocms-maps-{{ object.map_provider }}-{{ object.pk }}"
@@ -25,4 +25,7 @@
         style="{% if object.width %}width: {{ object.width }}; {% endif %}{% if object.height %}height: {{ object.height }};{% endif %}">
     </div>
     {% include "djangocms_maps/provider/"|add:object.map_provider|add:".html" %}
+    {% for plugin in object.child_plugin_instances %}
+        {% render_plugin plugin %}
+    {% endfor %}
 </div>
