FEAT: Replace load staticfiles with load static in templates

--- a/djangocms_maps/templates/djangocms_maps/provider/bingmaps.html
+++ b/djangocms_maps/templates/djangocms_maps/provider/bingmaps.html
@@ -1,4 +1,4 @@
-{% load staticfiles sekizai_tags %}
+{% load static sekizai_tags %}
 
 {% addtoblock "js" %}<script src="//www.bing.com/api/maps/mapcontrol?callback=djangocms_Maps_init" async defer></script>{% endaddtoblock %}
 {% addtoblock "js" %}<script src="{% static 'djangocms_maps/js/bingmaps.js' %}"></script>{% endaddtoblock %}
