--- a/djangocms_maps/templates/djangocms_maps/provider/googlemaps.html
+++ b/djangocms_maps/templates/djangocms_maps/provider/googlemaps.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles sekizai_tags %}
+{% load i18n static sekizai_tags %}
 
 {% get_current_language as LANGUAGE_CODE %}
 {% addtoblock "js" %}<script src="https://maps.googleapis.com/maps/api/js?v=3&key={{ api_key }}&language={{ LANGUAGE_CODE }}"></script>{% endaddtoblock %}
