--- a/djangocms_maps/templates/djangocms_maps/provider/here.html
+++ b/djangocms_maps/templates/djangocms_maps/provider/here.html
@@ -1,4 +1,4 @@
-{% load staticfiles sekizai_tags %}
+{% load static sekizai_tags %}
 
 {% addtoblock "css" %}<link href="https://js.api.here.com/v3/3.0/mapsjs-ui.css" rel="stylesheet" type="text/css" />{% endaddtoblock %}
 {% addtoblock "js" %}<script src="https://js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="UTF-8"></script>{% endaddtoblock %}
