--- a/djangocms_maps/templates/djangocms_maps/provider/mapbox.html
+++ b/djangocms_maps/templates/djangocms_maps/provider/mapbox.html
@@ -1,4 +1,4 @@
-{% load staticfiles sekizai_tags i18n %}
+{% load static sekizai_tags i18n %}
 
 {% if object.layers_control %}
 {% comment %}
@@ -24,7 +24,7 @@
       .mapboxgl-ctrl-layers {
         padding: 7px 10px 10px 10px;
       }
-      
+
       .mapboxgl-ctrl-layers label {
         margin: 0 1em 0 .25em;
       }
